Updated libdatachannel to v0.7.2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -749,8 +749,7 @@ else()
 endif()
 
 if (webtorrent)
-	option(USE_JUICE "Use libjuice instead of libnice for libdatachannel" ON)
-	option(NO_WEBSOCKET "Enable WebSocket support in libdatachannel" ON)
+	option(NO_WEBSOCKET "Disable WebSocket support in libdatachannel" ON)
 	if(GNUTLS_FOUND)
 		option(USE_GNUTLS "Use GnuTLS instead of OpenSSL for libdatachannel" ON)
 	else()
