--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,9 +31,10 @@ environment:
       compiler: gcc
       model: 32
       crypto: openssl
-      ssl_lib: c:\OpenSSL-v111-Win32\lib
-      ssl_include: c:\OpenSSL-v111-Win32\include
+      ssl_lib: /usr/local/include
+      ssl_include: /usr/local/lib
       bjam: 1
+      test_target: deterministic-tests
 
 artifacts:
   - path: bindings/python/dist/*
@@ -47,6 +48,7 @@ install:
   - if not defined crypto ( set crypto=built-in )
   - if not defined ssl_lib ( set ssl_lib=c:\ )
   - if not defined ssl_include ( set ssl_include=c:\ )
+  - if not defined test_target ( set test_target="" )
   - cd %ROOT_DIRECTORY%
   - set BOOST_ROOT=c:\Libraries\boost_1_69_0
   - set BOOST_BUILD_PATH=%BOOST_ROOT%\tools\build
@@ -119,7 +121,7 @@ build_script:
 test_script:
   - cd %ROOT_DIRECTORY%\test
   - if defined bjam (
-    appveyor-retry b2.exe -l500 --hash openssl-lib=%ssl_lib% openssl-include=%ssl_include% warnings=all warnings-as-errors=on -j %NUMBER_OF_PROCESSORS% %compiler% address-model=%model% picker-debugging=on invariant-checks=full variant=%variant% link=shared crypto=%crypto% asserts=on export-extra=on win-tests
+    appveyor-retry b2.exe -l500 --hash openssl-lib=%ssl_lib% openssl-include=%ssl_include% warnings=all warnings-as-errors=on -j %NUMBER_OF_PROCESSORS% %compiler% address-model=%model% picker-debugging=on invariant-checks=full variant=%variant% link=shared crypto=%crypto% asserts=on export-extra=on %test_target%
     )
 
   - cd %ROOT_DIRECTORY%\bindings\python
