--- a/.travis.yml
+++ b/.travis.yml
@@ -44,17 +44,14 @@ matrix:
         apt:
           packages:
           - ninja-build
-    - env: arch=arm toolset=gcc-arm
-      addons:
-        apt:
-          packages:
-          - qemu-user-static
-    - env: arch=s390x toolset=gcc-s390x
-      addons:
-        apt:
-          packages:
-          - g++-8-s390x-linux-gnu
-          - qemu-user-static
+    - env: toolset=gcc tests=1 variant=debug
+      os: linux
+      arch: arm64
+      dist: bionic
+    - env: toolset=gcc tests=1 variant=debug
+      os: linux
+      arch: s390x
+      dist: bionic
 
 notifications:
   email: false
@@ -145,23 +142,6 @@ install:
   - 'if [[ $toolset == "gcc-coverage" ]]; then
       echo "using gcc : coverage : ccache g++ --coverage : <linkflags>--coverage ;" >> ~/user-config.jam;
     fi'
-  - 'if [[ $toolset == "gcc-arm" ]]; then
-      echo "using gcc : arm : ccache armv8l-linux-gnueabihf-g++ :
-        <cxxflags>-Wno-psabi
-        <cxxflags>-fsigned-char
-        <cxxflags>-march=armv8-a+crc
-        <cxxflags>-mfpu=crypto-neon-fp-armv8
-        <cxxflags>-DTORRENT_FORCE_ARM_CRC32
-        <linkflags>-lm
-        <linkflags>-static-libstdc++
-        <linkflags>-static-libgcc ;" >> ~/user-config.jam;
-    fi;'
-  - 'if [[ $toolset == "gcc-s390x" ]]; then
-      echo "using gcc : s390x : ccache s390x-linux-gnu-g++-8 :
-        <linkflags>-lm
-        <linkflags>-static-libstdc++
-        <linkflags>-static-libgcc ;" >> ~/user-config.jam;
-    fi;'
   - 'if [ $clang_tidy == "1" ]; then
       echo "using clang_tidy : : clang-tidy "-checks=-clang-analyzer-core.*,modernize-pass-by-value,modernize-use-auto,modernize-use-default-member-init,hicpp-deprecated-headers,readability-inconsistent-declaration-parameter-name,modernize-return-braced-init-list,readability-qualified-auto" : <cxxflags>-DBOOST_ASIO_DISABLE_STD_EXPERIMENTAL_STRING_VIEW=1 <cxxflags>-I/usr/local/clang-7.0.0/include/c++/v1 <cxxflags>-stdlib=libc++ <linkflags>-stdlib=libc++ ;" >> ~/user-config.jam;
     fi'
@@ -208,31 +188,6 @@ install:
   - ccache -V
   - ccache --show-stats
   - ccache --zero-stats
-
-  - 'if [[ "$arch" == "arm" ]]; then
-      cd $TRAVIS_BUILD_DIR/test;
-      wget --no-verbose -O gcc-linaro.tar.xz https://releases.linaro.org/components/toolchain/binaries/6.5-2018.12/armv8l-linux-gnueabihf/gcc-linaro-6.5.0-2018.12-x86_64_armv8l-linux-gnueabihf.tar.xz;
-      tar xf gcc-linaro.tar.xz;
-      export PATH=${PWD}/gcc-linaro-6.5.0-2018.12-x86_64_armv8l-linux-gnueabihf/bin:${PATH};
-      armv8l-linux-gnueabihf-g++ --version;
-      wget --no-verbose -O ubuntu-base.tar.gz http://cdimage.ubuntu.com/ubuntu-base/releases/14.04/release/ubuntu-base-14.04.5-base-armhf.tar.gz;
-      sudo mkdir rootfs;
-      sudo tar xf ubuntu-base.tar.gz -C rootfs;
-      sudo cp /usr/bin/qemu-arm-static rootfs/usr/bin/;
-      sudo chroot rootfs mount -t proc none /proc;
-    fi'
-
-  - 'if [[ "$arch" == "s390x" ]]; then
-      cd $TRAVIS_BUILD_DIR/test;
-      s390x-linux-gnu-g++-8 --version;
-      wget --no-verbose -O ubuntu-base.tar.gz http://cdimage.ubuntu.com/ubuntu-base/releases/19.10/release/ubuntu-base-19.10-base-s390x.tar.gz;
-      sudo mkdir rootfs;
-      sudo tar xf ubuntu-base.tar.gz -C rootfs;
-      sudo cp /usr/bin/qemu-s390x-static rootfs/usr/bin/;
-      sudo chroot rootfs mount -t proc none /proc;
-      sudo mount -o bind /sys rootfs/sys/;
-      sudo chroot rootfs lscpu;
-    fi'
 
   - if [[ "$cmake" == "1" ]]; then
       which cmake;
@@ -367,21 +322,3 @@ script:
     fi
 
   - ccache --show-stats
-
-  - cd $TRAVIS_BUILD_DIR/test;
-  - 'if [[ "$arch" == "arm" ]];
-    then
-      ${B2} arm-tests warnings-as-errors=on warnings=all crypto=$crypto dht=off extensions=off logging=off deprecated-functions=off invariant-checks=off export-extra=on asserts=on $toolset target-os=linux link=static testing.execute=off;
-      sudo cp -R bin rootfs/;
-      travis_retry ${B2} arm-tests warnings-as-errors=on warnings=all crypto=$crypto dht=off extensions=off logging=off deprecated-functions=off invariant-checks=off export-extra=on asserts=on $toolset target-os=linux link=static testing.launcher="sudo chroot rootfs";
-    fi'
-  - 'if [[ "$arch" == "s390x" ]];
-    then
-      ${B2} s390x-tests warnings-as-errors=on warnings=all crypto=$crypto dht=on extensions=off logging=off deprecated-functions=off invariant-checks=off export-extra=on asserts=on $toolset target-os=linux link=static testing.execute=off;
-      sudo cp -R bin rootfs/home;
-      echo "#!/bin/sh\ncd home\nexec $1" > test-launcher.sh;
-      cat test-launcher.sh;
-      chmod +x test-launcher.sh;
-      sudo cp test-launcher.sh rootfs;
-      travis_retry ${B2} s390x-tests warnings-as-errors=on warnings=all crypto=$crypto dht=on extensions=off logging=off deprecated-functions=off invariant-checks=off export-extra=on asserts=on $toolset target-os=linux link=static testing.launcher="sudo chroot rootfs /bin/sh test-launcher.sh";
-    fi'
