--- a/.travis.yml
+++ b/.travis.yml
@@ -23,11 +23,18 @@ matrix:
     - env: variant=test_release coverage=1 tests=1 toolset=gcc-coverage
     - env: autotools=1 toolset=gcc install_boost=1
     - env: cmake=1 toolset=gcc install_boost=1
-    - env: arch=arm toolset=gcc-arm
       addons:
         apt:
           packages:
-          - libboost-tools-dev
+          - ninja-build
+    - env: toolset=gcc tests=1 variant=debug
+      os: linux
+      arch: arm64
+      dist: bionic
+    - env: toolset=gcc tests=1 variant=debug
+      os: linux
+      arch: s390x
+      dist: bionic
 
 notifications:
   email: false
@@ -138,17 +145,6 @@ install:
   - 'if [[ $toolset == "gcc-coverage" ]]; then
       echo "using gcc : coverage : ccache g++ --coverage : <cxxflags>-std=c++11 <linkflags>--coverage ;" >> ~/user-config.jam;
     fi'
-  - 'if [[ $toolset == "gcc-arm" ]]; then
-      echo "using gcc : arm : ccache armv8l-linux-gnueabihf-g++ :
-        <cxxflags>-std=c++11
-        <cxxflags>-fsigned-char
-        <cxxflags>-march=armv8-a+crc
-        <cxxflags>-mfpu=crypto-neon-fp-armv8
-        <cxxflags>-DTORRENT_FORCE_ARM_CRC32
-        <linkflags>-lm
-        <linkflags>-static-libstdc++
-        <linkflags>-static-libgcc ;" >> ~/user-config.jam;
-    fi;'
   - 'if [ $clang_tidy == "1" ]; then
       echo "using clang_tidy : : clang-tidy "-checks=-clang-analyzer-core.*" : <cxxflags>-std=c++11 <cxxflags>-I/usr/local/clang-7.0.0/include/c++/v1 <cxxflags>-stdlib=libc++ <linkflags>-stdlib=libc++ ;" >> ~/user-config.jam;
     fi'
@@ -187,24 +183,6 @@ install:
   - ccache -V
   - ccache --show-stats
   - ccache --zero-stats
-
-  - 'if [[ "$arch" == "arm" ]]; then
-      cd test;
-      wget -O gcc-linaro.tar.xz https://releases.linaro.org/components/toolchain/binaries/5.3-2016.05/armv8l-linux-gnueabihf/gcc-linaro-5.3.1-2016.05-x86_64_armv8l-linux-gnueabihf.tar.xz;
-      tar xf gcc-linaro.tar.xz;
-      export PATH=${PWD}/gcc-linaro-5.3.1-2016.05-x86_64_armv8l-linux-gnueabihf/bin:${PATH};
-      armv8l-linux-gnueabihf-g++ --version;
-      wget -O boost.zip http://pilotfiber.dl.sourceforge.net/project/boost/boost/1.58.0/boost_1_58_0.zip;
-      unzip -qq boost.zip;
-      export BOOST_ROOT=$PWD/boost_1_58_0;
-      travis_retry sudo apt-get install -y qemu-user-static;
-      wget -O ubuntu-base.tar.gz http://cdimage.ubuntu.com/ubuntu-base/releases/14.04/release/ubuntu-base-14.04.5-base-armhf.tar.gz;
-      sudo mkdir rootfs;
-      sudo tar xf ubuntu-base.tar.gz -C rootfs;
-      sudo cp /usr/bin/qemu-arm-static rootfs/usr/bin/;
-      sudo chroot rootfs mount -t proc none /proc;
-      cd ..;
-    fi'
 
   - if [[ "$cmake" == "1" ]]; then
       which cmake;
@@ -327,9 +305,3 @@ script:
     fi
 
   - ccache --show-stats
-
-  - cd test
-  - 'if [[ "$arch" == "arm" ]]; then
-      ${B2} arm-tests warnings-as-errors=on warnings=all crypto=$crypto variant=test_arm $toolset target-os=linux link=static testing.launcher="sudo cp -R bin rootfs/; sudo chroot rootfs";
-    fi'
-  - cd ..
