--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -781,6 +781,10 @@ if(developer-options)
 		ENABLED TORRENT_PROFILE_CALLS=1)
 endif()
 
+if (${CMAKE_CXX_STANDARD} STREQUAL "11")
+	target_compile_definitions(torrent-rasterbar PUBLIC TORRENT_CXX11_ABI)
+endif()
+
 # There is little to none support for using pkg-config with MSVC and most users won't bother with it.
 # However, msys is a linux-like platform on Windows that do support/prefer using pkg-config.
 if (NOT MSVC)
