fix C++11 issue with wrapped string_map constructors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -781,7 +781,11 @@ if(developer-options)
 		ENABLED TORRENT_PROFILE_CALLS=1)
 endif()
 
-if (${CMAKE_CXX_STANDARD} STREQUAL "11")
+# This is best effort attempt to propagate whether the library was built with
+# C++11 or not. It affects the ABI of entry. A client building with C++14 and
+# linking against a libtorrent binary built with C++11 can still define
+# TORRENT_CXX11_ABI
+if ("${CMAKE_CXX_STANDARD}" STREQUAL "11")
 	target_compile_definitions(torrent-rasterbar PUBLIC TORRENT_CXX11_ABI)
 endif()
 
