build with OpenSSL on FreeBSD CI

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,7 +4,7 @@ freebsd_instance:
 task:
   install_script: |
     pkg update
-    pkg install -U -y git boost-jam boost-libs unzip wget
+    pkg install -U -y git boost-jam boost-libs unzip wget openssl
     wget "https://github.com/boostorg/build/archive/develop.zip"
     unzip develop.zip
     git clone --depth=1 --single-branch --branch boost-1.74.0 https://github.com/boostorg/build.git
@@ -18,4 +18,4 @@ task:
     export BOOST_BUILD_PATH=${PWD}/build-develop
     export PATH=${PWD}/build-develop:$PATH
     cd test
-    bjam -j2 -l250 warnings-as-errors=on warnings=all deterministic-tests
+    bjam -j2 -l250 warnings-as-errors=on warnings=all crypto=openssl deterministic-tests
